# taiwan-local-councils-journals-scraper

./: README.md  app.spec  pyproject.toml
