[tool.poetry]
name = "lcjournal-scraper"
version = "1.1.0"
description = "中華民國地方議會議事錄總庫檢索結果截取器"
license = "MPL-2.0"
authors = ["Johann Chang <mr.changyuheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/changyuheng/taiwan-local-councils-journals-scraper"
packages = [
    { include = "lcjournal_scraper", from = "packages" },
]

[tool.poetry.dependencies]
python = "^3.10"
dacite = "^1.6.0"
selenium = "^4.1.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[tool.poetry.scripts]
lcjournal-scraper = 'lcjournal_scraper.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
